--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,30 +1,98 @@
-// Main Colors
-$background: #fff;
-$paragraph: #f0f0f0;
+@mixin backdrop-blur($bdbColor) {
+    background: $bdbColor;
+    @supports (backdrop-filter: saturate(180%) blur(20px)) {
+        background: rgba($bdbColor, 0.5);
+        backdrop-filter: saturate(180%) blur(20px);
+    }
+}
 
-$color: #111;
-$background: #fff;
-$paragraph: #f0f0f0;
-$primary: #0088ff;
-$error: #ff4757;
-$success: #25ca49;
-$alarm: #f1c40f;
+@mixin tc-container {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    height: 20px;
+    margin: 3px;
+    //   user-select: none;
+    transition: 0.2s ease-in-out;
+    border: 1px solid transparent;
+    cursor: pointer;
+}
+@mixin tc-container__dark {
+    @include tc-container();
+    color: #fff;
+    background: lighten($color, 20%);
+    border-color: rgba(#fff, 0.01);
+    &:hover,
+    &:focus,
+    &:focus-within {
+        border-color: rgba(#fff, 0.4);
+    }
+}
+@mixin tc-container__light {
+    @include tc-container();
+    color: $color;
+    background: $paragraph;
+    border-radius: $border-radius;
+    &:hover,
+    &:focus,
+    &:focus-within {
+        border-color: rgba($color, 0.4);
+    }
+}
 
-$color_colors: (
-    primary: $primary,
-    error: $error,
-    success: $success,
-    alarm: $alarm,
-    paragraph: darken($paragraph, 5%),
-);
+@mixin tc-container--title {
+    text-align: left;
+    font-weight: bold;
+    position: absolute;
+    white-space: nowrap;
+    top: -25px;
+}
+@mixin tc-container--indicator__icon {
+    padding-right: 5px;
+    margin-right: 5px;
+    position: relative;
+    &::after {
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 0.5px;
+        border-radius: 10px;
+        right: 0;
+        opacity: 0.6;
+        background: currentColor;
+    }
+}
 
-// Media Queries
-$isMobile: "only screen and(max-width: 850px)";
-$isDesktop: "only screen and(min-width: 851px)";
+@mixin custom-scrollbar {
+    &::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+        position: absolute !important;
+        border-radius: 4px;
+        transition: 0.2s ease;
+    }
 
-// Options
-$border-radius: 5px;
+    &::-webkit-scrollbar-thumb {
+        transition: 0.2s ease;
+        border-radius: 4px;
+    }
+}
+@mixin custom-scrollbar__dark {
+    @include custom-scrollbar();
+    &::-webkit-scrollbar-thumb {
+        background: #666;
+        &:hover {
+            background: #888;
+        }
+    }
+}
 
-$shadow-light: 2px 4px 10px rgba(0, 0, 0, 0.08);
-$shadow: 4px 8px 20px rgba(0, 0, 0, 0.1);
-$shadow-hover: 4px 8px 20px rgba(0, 0, 0, 0.19);
+@mixin custom-scrollbar__light {
+    @include custom-scrollbar();
+    &::-webkit-scrollbar-thumb {
+        background: #aaa;
+        &:hover {
+            background: #888;
+        }
+    }
+}
